testcases/3-lua_filter_to_modify_x-forwarded-proto/httpbin-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin
  namespace: httpbin
spec:
  gateways:
  - istio-system/httpbin-gateway
  hosts:
  - httpbin.aegle.info
  http:
  - name: http
    route:
    - destination:
        host: httpbin.httpbin.svc.cluster.local
        port:
          number: 8000
      weight: 100
