testcases/3-lua_filter_to_modify_x-forwarded-proto/ap.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-method-get
  namespace: httpbin
spec:
  selector:
    matchLabels:
      app: httpbin
  action: DENY
  rules:
  - to:
    - operation:
        methods: ["GET"]
    when:
    - key: request.headers[x-forwarded-proto]
      notValues: ["https"]
---
